Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67007

Text.NativeRendering on Linux/Freetype produces pixelated labels with non-integer QT_DEVICE_PIXEL_RATIO

XMLWordPrintable

    • Linux/X11
    • f0f632c7c1043f9c8097b4677f0a9eae01f916d2

      This is like QTBUG-42606, but for non-integer scale factors. It is reproducible in KDE Plasma by setting QT_DEVICE_PIXEL_RATIO via a systemwide scale factor (System Settings > Display & Monitor > Displays > Scale) and then viewing a piece of QML text that has `RenderType: Text.NativeRendering` set.

      See the attachments, which are from QTBUG-42606. The same issue is visible, but for non-integer scale factors. With a scale factor or 1 or 2, all three lines of text look fine. With a non-integer scale factor, the middle puece of text looks blurry.

      Switching to Text.QtRendering resolves the issue completely.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            pointedstick Nate Graham
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes