Use QQuickWindow::setTextRenderType() for the default text rendering type

This affects QQuickText, QQuickTextInput and QQuickTextEdit based QML elements.

With integer scale factors, NativeTextRendering will be used.

With fractional scale factors, QtTextRendering will be used.

Even though https://bugreports.qt.io/browse/QTBUG-67007 is closed,
there are still sometimes graphical issues when using native text rendering with fractional scale factors.