kirigami-plasmadesktop-integration/plasmadesktoptheme.cpp
@@ -56,6 +56,14 @@ public:
         QStringLiteral( "notifyChange" ), this, SLOT(notifyWatchersConfigurationChange()));
 
         connect(qGuiApp, &QGuiApplication::fontDatabaseChanged, this, &StyleSingleton::notifyWatchersConfigurationChange);
+
+        // Use NativeTextRendering as the default text rendering type when the scale factor is an integer.
+        // NativeTextRendering is still distorted sometimes with fractional scale factors,
+        // despite https://bugreports.qt.io/browse/QTBUG-67007 being closed.
+        qreal devicePixelRatio = qGuiApp->devicePixelRatio();
+        QQuickWindow::TextRenderType defaultTextRenderType = int(devicePixelRatio) == devicePixelRatio ?
+            QQuickWindow::NativeTextRendering : QQuickWindow::QtTextRendering;
+        QQuickWindow::setTextRenderType(defaultTextRenderType);
     }
 
     void refresh()
